objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_Time_From__c</fullName>
        <label>Duration Time (From)</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Duration_Time_To__c</fullName>
        <label>Duration Time (To)</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Engineer_Name__c</fullName>
        <label>Engineer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC__c</fullName>
        <label>SVC</label>
        <referenceTo>SVC__c</referenceTo>
        <relationshipLabel>Activity</relationshipLabel>
        <relationshipName>Activity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Status 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visiting_Memo__c</fullName>
        <label>Visiting Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Hour__c</fullName>
        <formula>TEXT(Duration_Time_From__c) + &apos; - &apos; + TEXT(Duration_Time_To__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Hour</label>
        <type>Text</type>
    </fields>
    <label>Activity</label>
    <nameField>
        <label>Activity ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>